syntax = "proto3";

package omogen.runner;

import "api/language.proto";
import "api/program.proto";
import "api/eval.proto";

message CompileRequest {
  Program program = 1;
  // The directory the resulting program should be output in.
  string output_path = 2;
}

message CompileResponse {
  CompiledProgram program = 1;
  string compilation_output = 2;
  string compilation_error = 3;
}

message GetLanguagesRequest {}

// A response with all installed languages.
message GetLanguagesResponse {
  // All supported languages supported on the machine.
  repeated Language installed_languages = 1;
}

// A request to evaluate an already compiled program on testdata.
message EvaluateRequest {
  int32 submission_id = 1;
  EvaluationPlan plan = 2;
}

// A partial response to an evaluation.
message EvaluateResponse {
  Result result = 1;
}

// Runservice is capable of evaluating submissions. It also provides a list of
// installed languages together with their current versions.
service RunService {
  // Compile source files in a program, producing a compiled program.
  rpc Compile(CompileRequest) returns (CompileResponse) {}

  // Evaluate a compiled submission.
  rpc Evaluate(EvaluateRequest) returns (stream EvaluateResponse) {}

  // Fetch all supported languages of the machine hosting this service.
  rpc GetLanguages(GetLanguagesRequest) returns (GetLanguagesResponse) {}
}
